(our_learning_website)==> header nav -> Hover frature added

--- a/our_larning_website.html
+++ b/our_larning_website.html
@@ -17,13 +17,34 @@
   <body>
     <!-- ---header Starts Hare--- -->
     <header>
-      <nav class="logo_nav display">
-        <div class="logo left-logo">
-          <img src="./All_Image/Logo/channels4_profile.jpg" alt="left-logo" />
-        </div>
-        <div class="header_name"><h1>We Are Learners</h1></div>
+      <nav class="container">
+        <div class="logo">Learning_Website</div>
+        <ul>
+          <a href="#hero">
+            <li>Home</li>
+          </a>
+          <a href="#main">
+            <li>Home</li>
+          </a>
+          <a href="#bannar">
+            <li>sami</li>
+          </a>
+        </ul>
       </nav>
     </header>
-    <!-- ---header Starts Hare--- -->
+    <!-- ---header End Hare--- -->
+    <!-- <nav>
+      <h2 class="display">Our Teem Members.</h2>
+    </nav> -->
+    <!-- main section starts hare  -->
+    <main>
+      <div class="main_div display">
+        <h1 style="font-size: 3rem; font-family: serif; text-align: center">
+          Our Team Members.
+        </h1>
+        <br />
+      </div>
+    </main>
+    <!-- main section End hare  -->
   </body>
 </html>
