(our_learning_website)==> background_image added

--- a/our_larning_website.html
+++ b/our_larning_website.html
@@ -23,19 +23,24 @@
           <a href="#hero">
             <li>Home</li>
           </a>
+          <a href="#hero">
+            <li>Classes</li>
+          </a>
           <a href="#main">
-            <li>Home</li>
+            <li>Members</li>
           </a>
           <a href="#bannar">
-            <li>sami</li>
+            <li>Contact</li>
           </a>
         </ul>
       </nav>
     </header>
     <!-- ---header End Hare--- -->
-    <!-- <nav>
-      <h2 class="display">Our Teem Members.</h2>
-    </nav> -->
+    <div class="background_pic">
+      <div class="heading container">
+        <p>We Are Learner</p>
+      </div>
+    </div>
     <!-- main section starts hare  -->
     <main>
       <div class="main_div display">
