(our_learning_website)==> text animation added

--- a/our_larning_website.html
+++ b/our_larning_website.html
@@ -37,8 +37,11 @@
     </header>
     <!-- ---header End Hare--- -->
     <div class="background_pic">
-      <div class="heading container">
-        <p>We Are Learner</p>
+      <div class="heading container typewriter">
+        <p>We Are Learners</p>
+        <!-- <div class="typewriter">
+          <h1>We are learners</h1>
+        </div> -->
       </div>
     </div>
     <!-- main section starts hare  -->
