(our_learning_website)==> main-> {section==>01:Shourave_vaiya} Full Compleate

--- a/our_larning_website.html
+++ b/our_larning_website.html
@@ -12,18 +12,20 @@
     />
     <!-- css link connect hare  -->
     <link rel="stylesheet" href="./Website/our_larning_website_style.css" />
-    <title>Document</title>
+    <title>We Are Learners</title>
   </head>
-  <body>
+  <body id="hero">
     <!-- ---header Starts Hare--- -->
     <header>
       <nav class="container">
-        <div class="logo">Learning_Website</div>
+        <div class="logo">
+          <a href="./our_larning_website.html">Learning_Website</a>
+        </div>
         <ul>
           <a href="#hero">
             <li>Home</li>
           </a>
-          <a href="#hero">
+          <a href="#classes">
             <li>Classes</li>
           </a>
           <a href="#main">
@@ -44,14 +46,105 @@
         </div> -->
       </div>
     </div>
+    <div class="hr"></div>
     <!-- main section starts hare  -->
-    <main>
+    <main id="classes">
       <div class="main_div display">
-        <h1 style="font-size: 3rem; font-family: serif; text-align: center">
-          Our Team Members.
-        </h1>
+        <u>
+          <h1
+            style="font-size: 3rem; font-family: monospace; text-align: center"
+          >
+            Our Classes:
+          </h1>
+        </u>
         <br />
       </div>
+      <section class="classes_section container">
+        <p class="Shourav_name">
+          Rezuan_Ahmed_Shourav<span style="font-family: sans-serif">:</span>
+        </p>
+
+        <div class="classes_container">
+          <!-- Grid_item=====>01 -->
+          <div class="grid_item">
+            <div class="img_class">
+              <img src="./Classes_img/shourav_vaiya/html/html.jpg" alt="html" />
+              <div class="classes_contant">
+                <h3><span class="bg_letter">HTML_Full</span> Course</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Grid_item=====>02 -->
+          <div class="grid_item">
+            <div class="img_class">
+              <img
+                src="./Classes_img/shourav_vaiya/css/hqdefault.jpg"
+                alt="css"
+              />
+              <div class="classes_contant">
+                <h3><span class="bg_letter">CSS_Full</span> Course</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Grid_item=====>03 -->
+          <div class="grid_item">
+            <div class="img_class">
+              <img
+                src="./Classes_img/shourav_vaiya/git_github/git-hub.jpg"
+                alt="git_github"
+              />
+              <div class="classes_contant">
+                <h3><span class="bg_letter">Git-Github_</span> Full Course</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Grid_item=====>04 -->
+          <div class="grid_item">
+            <div class="img_class">
+              <img src="" alt="" />
+              <div class="classes_contant">
+                <h3></h3>
+              </div>
+            </div>
+          </div>
+          <!-- Grid_item=====>05 -->
+          <div class="grid_item">
+            <div class="img_class">
+              <img src="" alt="" />
+              <div class="classes_contant">
+                <h3></h3>
+              </div>
+            </div>
+          </div>
+          <!-- Grid_item=====>06 -->
+          <div class="grid_item">
+            <div class="img_class">
+              <img src="" alt="" />
+              <div class="classes_contant">
+                <h3></h3>
+              </div>
+            </div>
+          </div>
+          <!-- Grid_item=====>07 -->
+          <div class="grid_item">
+            <div class="img_class">
+              <img src="" alt="" />
+              <div class="classes_contant">
+                <h3></h3>
+              </div>
+            </div>
+          </div>
+          <!-- Grid_item=====>08 -->
+          <div class="grid_item">
+            <div class="img_class">
+              <img src="" alt="" />
+              <div class="classes_contant">
+                <h3></h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- main section End hare  -->
   </body>
