our_learning_website)==> main-> {section==>01:Shourave_vaiya} LINK added Compleate

--- a/our_larning_website.html
+++ b/our_larning_website.html
@@ -67,36 +67,56 @@
         <div class="classes_container">
           <!-- Grid_item=====>01 -->
           <div class="grid_item">
-            <div class="img_class">
-              <img src="./Classes_img/shourav_vaiya/html/html.jpg" alt="html" />
-              <div class="classes_contant">
-                <h3><span class="bg_letter">HTML_Full</span> Course</h3>
+            <a
+              href="https://www.youtube.com/playlist?list=PL4NdokFCZ1I5SBzeW4fibwSvNtwq0Ri9u"
+              target="_blank"
+            >
+              <div class="img_class">
+                <img
+                  src="./Classes_img/shourav_vaiya/html/html.jpg"
+                  alt="html"
+                />
+                <div class="classes_contant">
+                  <h3><span class="bg_letter">HTML_Full</span> Course</h3>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
           <!-- Grid_item=====>02 -->
           <div class="grid_item">
-            <div class="img_class">
-              <img
-                src="./Classes_img/shourav_vaiya/css/hqdefault.jpg"
-                alt="css"
-              />
-              <div class="classes_contant">
-                <h3><span class="bg_letter">CSS_Full</span> Course</h3>
+            <a
+              href="https://www.youtube.com/playlist?list=PL4NdokFCZ1I4ByMIFba3lgU4PrWeoCa8B"
+              target="_blank"
+            >
+              <div class="img_class">
+                <img
+                  src="./Classes_img/shourav_vaiya/css/hqdefault.jpg"
+                  alt="css"
+                />
+                <div class="classes_contant">
+                  <h3><span class="bg_letter">CSS_Full</span> Course</h3>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
           <!-- Grid_item=====>03 -->
           <div class="grid_item">
-            <div class="img_class">
-              <img
-                src="./Classes_img/shourav_vaiya/git_github/git-hub.jpg"
-                alt="git_github"
-              />
-              <div class="classes_contant">
-                <h3><span class="bg_letter">Git-Github_</span> Full Course</h3>
+            <a
+              href="https://www.youtube.com/playlist?list=PL4NdokFCZ1I5wsR4XdPgbXAizsRaa0bpE"
+              target="_blank"
+            >
+              <div class="img_class">
+                <img
+                  src="./Classes_img/shourav_vaiya/git_github/git-hub.jpg"
+                  alt="git_github"
+                />
+                <div class="classes_contant">
+                  <h3>
+                    <span class="bg_letter">Git-Github_</span> Full Course
+                  </h3>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
           <!-- Grid_item=====>04 -->
           <div class="grid_item">
