(our_learning_website) ---------finished.[contact]->need to add some link

--- a/our_larning_website.html
+++ b/our_larning_website.html
@@ -7,9 +7,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <!-- Google Fonts link connect hare  -->
+    <script
+      src="https://kit.fontawesome.com/e6b4a99a6b.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- css link connect hare  -->
     <link rel="stylesheet" href="./Website/our_larning_website_style.css" />
     <title>We Are Learners</title>
@@ -31,7 +42,7 @@
           <a href="#members">
             <li>Members</li>
           </a>
-          <a href="#bannar">
+          <a href="#contact">
             <li>Contact</li>
           </a>
         </ul>
@@ -688,9 +699,64 @@
       <div class="hr"></div>
       <!-- Members_Section END Hare-------- -->
     </main>
+
     <!-- main section End hare  -->
     <!-- ------------------------------------------------------------ -->
     <!-- Footer section Starts hare  -->
+    <footer id="contact">
+      <div class="contact_container">
+        <div class="contact_contant container">
+          <div class="message">
+            <p>
+              This website is not open to everyone,<br />
+              Only those who are members (we are learners) can use this
+              website...
+            </p>
+          </div>
+          <div class="link_contact">
+            <h2>Let's Work Together...</h2>
+            <div class="top_link link">
+              <i class="fa-brands fa-facebook-f">
+                <span>FaceBook_Page</span>
+              </i>
+              <i class="fa-brands fa-youtube">
+                <span>YouTube</span>
+              </i>
+              <i class="fa-solid fa-envelopes-bulk"> <span>G-mail</span> </i>
+            </div>
+            <div class="link bottom_link">
+              <a
+                href="https://www.facebook.com/groups/1133069904162554"
+                target="_blank"
+              >
+                <i class="fa-brands fa-facebook"
+                  ><span>FaceBook Group (Official)</span></i
+                >
+              </a>
+              <i class="fa-solid fa-inbox"><span>Our Course</span></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="hr"></div>
+
+      <div class="made">
+        <div class="container f_con">
+          <div class="footer_text">
+            <p>Sami worked behind the creation of this website.</p>
+          </div>
+          <div class="footer_contant">
+            <div class="footer_img">
+              <img
+                src="./All_Image/Waliur_Rafiq_Sami_img/20211225_145259.jpg"
+                alt=""
+              />
+            </div>
+            <div class="f-name">Waliur Rafiq SAMI</div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- Footer section End hare  -->
   </body>
 </html>
