website all program completed

--- a/our_larning_website.html
+++ b/our_larning_website.html
@@ -489,7 +489,7 @@
             <!-- Grid_item=====>01 -->
             <div class="grid_item">
               <a
-                href="https://www.youtube.com/playlist?list=PLNMnAEqLBwmo2aAHG1hT41QCgYV3366gp"
+                href="./Rezuan_Ahmed_Shourav/shourav_index.html"
                 target="_blank"
               >
                 <div class="img_class">
@@ -507,10 +507,7 @@
             </div>
             <!-- Grid_item=====>02 -->
             <div class="grid_item">
-              <a
-                href="https://www.youtube.com/playlist?list=PLNMnAEqLBwmq4cvfIMWE9ZiAmndL5VOIM"
-                target="_blank"
-              >
+              <a href="./Waliur_Rafiq_Sami/sami_index.html" target="_blank">
                 <div class="img_class">
                   <img
                     src="./All_Image/Waliur_Rafiq_Sami_img/IMG-20220414-WA0019.jpg"
@@ -526,10 +523,7 @@
             </div>
             <!-- Grid_item=====>03 -->
             <div class="grid_item">
-              <a
-                href="https://www.youtube.com/playlist?list=PLNMnAEqLBwmoTn_BC62l73QRUXSdUWiiS"
-                target="_blank"
-              >
+              <a href="./Uttam_Datta/uttam_index.html" target="_blank">
                 <div class="img_class">
                   <img
                     src="./All_Image/Uttam_Datta_img/336684473_1373912253421327_3285257976424870019_n.jpg"
@@ -545,10 +539,7 @@
             </div>
             <!-- Grid_item=====>04 -->
             <div class="grid_item">
-              <a
-                href="https://www.youtube.com/playlist?list=PLNMnAEqLBwmodUM0HlExxtYERNS2YARhW"
-                target="_blank"
-              >
+              <a href="./Hasan_Islam/hasan_index.html" target="_blank">
                 <div class="img_class">
                   <img
                     src="./All_Image/Hasan_img/363817535_1802768376846218_3291045818850334158_n.jpg"
@@ -562,10 +553,7 @@
             </div>
             <!-- Grid_item=====>05 -->
             <div class="grid_item">
-              <a
-                href="https://www.youtube.com/playlist?list=PLNMnAEqLBwmqKGMJOtVcvGE-QrAte_95q"
-                target="_blank"
-              >
+              <a href="./Masum_Hossain/masum_index.html" target="_blank">
                 <div class="img_class">
                   <img
                     src="./All_Image/Masum_Hossain_img/12496300_716283895174084_8532117392643636677_o.jpg"
@@ -581,10 +569,7 @@
             </div>
             <!-- Grid_item=====>06 -->
             <div class="grid_item">
-              <a
-                href="https://www.youtube.com/playlist?list=PLNMnAEqLBwmqnr-hhIa2z-2janfklDV4A"
-                target="_blank"
-              >
+              <a href="./Rubel_Hossain/rubel_index.html" target="_blank">
                 <div class="img_class">
                   <img
                     src="./All_Image/Rubel_Hossain_img/160281335_3439358126170190_340637016244722332_n.jpg"
@@ -600,10 +585,7 @@
             </div>
             <!-- Grid_item=====>07 -->
             <div class="grid_item">
-              <a
-                href="https://www.youtube.com/playlist?list=PLNMnAEqLBwmpMz-CuZ9aSQ0c-jgGxqzdP"
-                target="_blank"
-              >
+              <a href="Tanveer_Abrar_Aaru/tanveer_index.html" target="_blank">
                 <div class="img_class">
                   <img
                     src="./All_Image/Tanveer_Abrar_Aaru_img/325950896_712426693618973_4597506358424037651_n.jpg"
@@ -619,10 +601,7 @@
             </div>
             <!-- Grid_item=====>08 -->
             <div class="grid_item">
-              <a
-                href="https://www.youtube.com/playlist?list=PLNMnAEqLBwmr2r0Lanm0kkjkz571lkgyU"
-                target="_blank"
-              >
+              <a href="Md_Foysal_Ahmad/foysal_index.html" target="_blank">
                 <div class="img_class">
                   <img
                     src="./All_Image/Md_Foysal_Ahmah_img/347557223_556015420057102_4310768601896288723_n.jpg"
@@ -638,10 +617,7 @@
             </div>
             <!-- Grid_item=====>09 -->
             <div class="grid_item">
-              <a
-                href="https://www.youtube.com/playlist?list=PLNMnAEqLBwmpMz-CuZ9aSQ0c-jgGxqzdP"
-                target="_blank"
-              >
+              <a href="./Habibur_Rahman/habibur_index.html" target="_blank">
                 <div class="img_class">
                   <img
                     src="./All_Image/Habibur_img/350934956_804831140809029_7998643703243662328_n.jpg"
