--- a/Rezuan_Ahmed_Shourav/shourav_index.html
+++ b/Rezuan_Ahmed_Shourav/shourav_index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Waliur Rafiq SAMI</title>
+    <title>Razuan Ahmed Shourav</title>
     <!-- link of Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,14 +33,14 @@
           <div class="header_image">
             <img
               class="animate__backInLeft animate__animated"
-              src="../All_Image/Waliur_Rafiq_Sami_img/20211225_1452000059.jpg"
+              src="../All_Image/Rezuan_Ahmed_Shourav_img/20901582_478515499191548_5136968285301867665_o.jpg"
               alt="waliur rafiq sami"
             />
           </div>
           <div class="header_contant">
             <h1>
               <span class="bg_contant">Hi,</span> i am
-              <span class="name_contant"> Waliur Rafiq SAMI</span>
+              <span class="name_contant"> Rezuan Ahmed Shourav</span>
             </h1>
             <h2>My dream is to be a software engineer</h2>
           </div>
